# Engram

./: .gitignore  README.md  docker-compose.yml  install.sh
.claude/: launch.json
.github/workflows/: ci.yml
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/components/: AddMemoryDialog.tsx  CommandPalette.tsx  MemoryCard.tsx  Shell.tsx
apps/web/lib/: api.ts  types.ts
database/: schema.sql
docker/: api.Dockerfile  docker-compose.production.yml  prometheus.yml  web.Dockerfile
docs/: DEMO_SCRIPT.md  api.md  architecture.md  contributing.md  deployment.md  user-guide.md
scripts/: migrate_to_supermemory.py  seed.py
sdk/cli/: engram_cli.py  pyproject.toml
sdk/go/: go.mod
sdk/go/engram/: client.go
sdk/go/supermemory/: client.go
sdk/python/: pyproject.toml
sdk/python/engram/: __init__.py  client.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
services/api/: requirements.txt
services/api/app/: __init__.py  agents.py  ai.py  catalog.py  config.py  db.py  digital_twin.py  evaluation.py  events.py  graph.py  kernel.py  knowledge_evolution.py  main.py  memory_streaming.py  models.py  models_platform.py  observability.py  pipeline.py  rag.py  schemas.py  search.py  security.py  supermemory_client.py  tools.py  workflows.py
services/api/tests/: conftest.py  test_agents.py  test_api.py  test_digital_twin.py  test_evaluation.py  test_events.py  test_kernel.py  test_knowledge_evolution.py  test_pipeline.py  test_platform_api.py  (+3 more)
(+21 files in other folders)
