[project]
name = "engram-sdk"
version = "0.1.0"
description = "Python SDK for Engram — the memory layer for AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engram*"]
